<resources>
    <string name="app_name">Nutribi App</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Masukkan Pasword</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="label_no_account">Belum punya akun?</string>
    <string name="label_name">Nama</string>
    <string name="hint_name">Masukkan Nama</string>
    <string name="label_confirm_password">Konfirmasi Password</string>
    <string name="hint_confirm_password">Konfirmasi Password</string>
    <string name="label_has_account">Sudah punya akun?</string>
    <string name="label_birth_date">Tanggal Lahir</string>
    <string name="label_hi_mums">Hi Mums !</string>
    <string name="label_sign_in_to_your_account">Sign in to your account</string>
    <string name="label_mums_lagi_difase_apanih_yuk_dipilih">Mums lagi difase apanih? Yuk dipilih !</string>
    <string name="label_fase_awal_menyusui">Fase Awal Menyusui</string>
    <string name="label_0_6_bulan">0-6 Bulan</string>
    <string name="label_7_24_bulan">7-24 Bulan</string>
    <string name="label_fase_mpasi">Fase MPASI</string>
    <string name="action_next">Selanjutnya</string>
    <string name="label_hpht">Hari Pertama Haid Terakhir</string>
    <string name="hint_date">dd/mm/yyyy</string>
    <string name="label_hpl">Hari Perkiraan Lahir</string>
    <string name="label_baby_name">Nama Bayi</string>
    <string name="label_tanggal_lahir">Tanggal Lahir</string>
    <string name="hint_panjang_badan">100 cm</string>
    <string name="label_panjang_badan">Panjang Badan (CM)</string>
    <string name="label_berat_badan">Berat Badan (KG)</string>
    <string name="hint_berat_badan">5 kg</string>
    <string name="label_ukur_lingkaran_kepala">Ukur Lingkaran Kepala</string>
    <string name="hint_ukur_lingkar_kepala">50 cm</string>
    <string name="title_sarapan">Sarapan</string>
    <string name="title_makan_siang">Makan Siang</string>
    <string name="title_makan_malam">Makan Malam</string>
    <string name="tab_text_1">Bahan - Bahan</string>
    <string name="tab_text_2">Petunjuk</string>
    <string name="tv_take_photo">Take photo</string>
    <string name="tv_description">Select a preset image or take a new photo</string>
    <string name="tv_placeholder">Object detection demo</string>
    <string name="label_karbohidrat">Karbohidrat</string>
    <string name="label_proteion">Protein</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="label_lemak">Lemak</string>
    <string name="label_desc">Lihat kandungan bahan makanan Mums untuk si Kecil disini ya</string>
    <string name="label_scan">Scan</string>
    <string name="label_serat">Serat</string>
    <string name="label_kalsium">Kalsium</string>
    <string name="label_fosfor">Fosfor</string>
    <string name="label_natrium">Natrium</string>
    <string name="label_zink">Zink</string>
    <string name="label_kalium">Kalium</string>
    <string name="label_tembaga">Tembaga</string>
    <string name="label_seng">Seng</string>
    <string name="label_retinol">Retinol</string>
    <string name="label_betakaroten">Betakaroten</string>
    <string name="label_karoten">Karoten</string>
    <string name="label_thiamin">Thiamin</string>
    <string name="label_riboflavin">Riboflavin</string>
    <string name="label_niasin">Niasin</string>
    <string name="label_vitamin_c">Vitamin C</string>
    <string name="label_abu">Abu</string>

</resources>