<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_form_bayi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_40dp"
    android:layout_marginTop="@dimen/dimen_32dp"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@+id/tvLabelFase">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_baby_name"
            android:textSize="@dimen/text_size_16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/RoundedTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_18dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tanggal_lahir"
            android:textSize="@dimen/text_size_16sp" />

        <LinearLayout
            android:id="@+id/containerBabyBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="@drawable/rounded_white_fade_stroke_orange_dark_background">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBabyBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:layout_marginBottom="@dimen/dimen_12dp"
                android:text="@string/hint_date"
                android:textSize="@dimen/text_size_16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_18dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_panjang_badan"
            android:textSize="@dimen/text_size_16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPanjangBadan"
            style="@style/RoundedTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPanjangBadan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_panjang_badan"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_18dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_berat_badan"
            android:textSize="@dimen/text_size_16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBeratBadan"
            style="@style/RoundedTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtBeratBadan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_berat_badan"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_18dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ukur_lingkaran_kepala"
            android:textSize="@dimen/text_size_16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUkurLingkarKepala"
            style="@style/RoundedTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUkurLingkarKepala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_ukur_lingkar_kepala"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>